# markov-haskell

./: LICENSE  Markov.cabal  README.md
src/: Markov.hs
