name:                Markov
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Markov#readme
license:             BSD3
license-file:        LICENSE
author:              Marc Talbot
maintainer:          marc@ultimatetalbot.com
copyright:           2017 Marc Talbot
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Markov
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,directory
                      ,json
                      ,text
                      ,random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Markov
